refactored bp and score parameter parsing. it can analyze username with spaces